package tn.esprit.educlass.enums;

public enum EvaluationType {
    QUIZ,
    ASSIGNMENT,
    EXAM
}

