package tn.esprit.educlass.enums;

public enum QuestionType {
    MULTIPLE_CHOICE,
    SINGLE_CHOICE,
    OPEN
}

